--- a/requirements.txt
+++ b/requirements.txt
@@ -66,7 +66,6 @@ Pympler==1.0.1
 pyparsing==3.0.8
 pyrsistent==0.18.1
 python-dateutil==2.8.2
-pytube==12.0.0
 pytz==2022.1
 pytz-deprecation-shim==0.1.0.post0
 pyzmq==22.3.0
@@ -96,3 +95,4 @@ wcwidth==0.2.5
 webencodings==0.5.1
 widgetsnbextension==3.6.0
 zipp==3.8.0
+git+https://github.com/kinshuk-h/pytube
